fix: overflow scroll style

--- a/src/components/LanguageCard.scss
+++ b/src/components/LanguageCard.scss
@@ -23,7 +23,7 @@
 		background-color: #fff;
 		width: 300px;
 		height: 200px;
-		overflow: scroll;
+		//overflow: scroll;
 		border-radius: 1.2em;
 		margin: 5px 5px 10px 5px;
 		transition: 0.2s ease-in-out;
@@ -31,6 +31,7 @@
 			rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 		cursor: pointer;
 		padding: 10px 15px;
+
 		&:hover {
 			transform: scale(1.05) rotate(-1deg);
 		}
